components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
@import "../../../styles/settings/colors";
@import "../../../styles/settings/mixins";

.pressReleaseContent {
  .firstFold {
    width: 100vw;
    padding: unset;
    height: 100%;
    min-height: 25rem;
    overflow: hidden;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    .backgroundFilter {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: transparentize($color: #000, $amount: 0.35);
    }
    .backgroundImage {
      & > * {
        display: block !important;
        height: 100% !important;
      }
      position: absolute !important;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      img {
        object-fit: cover;
        max-height: unset !important;
        min-height: unset !important;
        height: 100% !important;
      }
    }
    .title {
      position: absolute;
      text-align: center;
      color: $color-white;
      * {
        font-weight: 400;
        font-size: 2rem;
      }
    }
    @include desktop() {
      min-height: 31.25rem;
      .backgroundImage {
        & > * {
          display: block !important;
          height: 100%;
        }
      }
      .title {
        position: absolute;
        text-align: center;
        color: $color-white;
        * {
          font-weight: 400;
          font-size: 2.5rem;
        }
      }
    }
  }
  .textContent {
    h2 {
      font-size: 1.75rem;
      font-weight: 400;
      font-style: italic;
      margin-top: unset;
    }
    @include desktop() {
      h2 {
        font-size: 2rem;
        font-weight: 400;
        font-style: italic;
        margin-top: unset;
      }
    }
  }
}

